--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,23 @@
 .bgAfad{
   background-image: url('./images/bgAfad.png');
   background-repeat: no-repeat;
-  background-size: 150px;
+  background-size: 100% 80%;
 }
 .bgKandilli{
   height: 100px;
   background-image: url('./images/bgKandilli.jpg');
   background-repeat: no-repeat;
-  background-size: 150px;
+  background-size: 100% 80%;
 }
 .logo{
-  width: 150px;
-  height: 150px;
-  margin: auto;
+  width: 100%;
+  height: 200px;
+}
+.center{
+  height: 20vh;
+  margin-top: 40vh;
+}
+.leaflet-container{
+  height: 100vh;
+  width: 100%;
 }
