--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 *{
     font-family: 'Open Sans', sans-serif;
+}
+.header{
+  font-family: 'Anton', sans-serif;
 }
 .layout{
   background-color: rgb(255, 255, 255,0.9) !important;
